[gd_scene load_steps=2 format=3 uid="uid://cn1q0mu6r3i2s"]

[ext_resource type="Script" path="res://addons/w4gd/plugin/editor/w4_workspace_settings.gd" id="1_tvjrk"]

[node name="WorkspaceSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tvjrk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Settings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Workspace Settings"

[node name="ProfilesButton" type="OptionButton" parent="VBoxContainer/Settings/HBoxContainer"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "default"
popup/item_0/id = 0

[node name="SettingsTree" type="Tree" parent="VBoxContainer/Settings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true

[node name="DeleteConfirm" type="ConfirmationDialog" parent="."]
title = "Delete Profile"

[connection signal="item_selected" from="VBoxContainer/Settings/HBoxContainer/ProfilesButton" to="." method="_on_profiles_button_item_selected"]
[connection signal="button_clicked" from="VBoxContainer/Settings/SettingsTree" to="." method="_on_settings_tree_button_clicked"]
[connection signal="item_edited" from="VBoxContainer/Settings/SettingsTree" to="." method="_on_settings_tree_item_edited"]
[connection signal="confirmed" from="DeleteConfirm" to="." method="_on_delete_confirm_confirmed"]
